# plant

./: .dockerignore  .env  .env.example  .gitignore  AUTOMATION_RESTRUCTURING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.old  README.md  deploy.sh  docker-compose.yml  plant.db  pyproject.toml  pyproject.toml.old
app/: deps.py  main.py
app/core/: config.py
app/db/: types.py
app/models/: entities.py  enums.py
app/routers/: __init__.py  alerts.py  commands.py  devices.py  telegram_webapp.py  telemetry.py  web.py
app/schemas/: alert.py  command.py  device.py
app/services/: app_settings.py  automation_engine.py
app/templates/: base.html  dashboard.html  device_detail.html  login.html  register.html  telegram_app.html
app/workers/: automation_worker.py
backend/: .dockerignore  .env  .env.example  API.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
backend/app/: app_factory.py  main.py
backend/clients/: test_device.json  test_device2.json  test_device3.json
backend/migrations/: 001_initial_schema.sql  002_device_secret_plaintext.sql  003_add_automation_execution_logs.sql  004_create_app_settings.sql  005_add_commands_payload.sql  006_add_commands_message.sql  007_add_sensor_readings_recorded_at.sql  008_add_sensor_readings_value_numeric.sql  (+1 more)
clients/: pi_client.py
device-client/: README.md  device_config.example.json  new_device.json  pi_client.py  test_device.json
frontend-telegram/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
frontend-telegram/app/routers/: groups.py  telegram_webapp.py
frontend-web/: .env  .env.example  Dockerfile  README.md  REFACTORING.md  docker-compose.yml  docker-compose.yml.bak  main.py  pyproject.toml  pyproject.toml.bak
frontend-web/app/: api_client.py  app_factory.py
frontend-web/app/routers/: __init__.py  groups.py  landing.py  web.py  web.py.bak
frontend-web/app/templates/: admin.html  app_download.html  base.html  dashboard.html  device_detail.html  landing.html  login.html  register.html
mobile_app/: pubspec.yaml  upload_apk.sh
nginx/: .env  .env.example  README.md  bla_bla  default.conf  default.conf.local  default.conf.template  docker-compose.yml  setup_remote_nginx.sh
plant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bootstrap_demo.py  deploy.sh  provision_device.py
(+50 files in other folders)
