[project]
name = "plant-frontend-telegram"
version = "0.1.0"
description = "Telegram Web App frontend for plant automation system"
authors = [{ name = "Codex" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.30",
    "jinja2~=3.1",
    "httpx~=0.27",
    # TODO: Remove these after refactoring to use HTTP API
    "sqlalchemy[asyncio]~=2.0",
    "aiosqlite~=0.20",
    "pydantic[email]~=2.12",
    "pydantic-settings~=2.4",
    "bcrypt==4.0.1",
    "itsdangerous~=2.2",
    "python-jose[cryptography]~=3.3",
    "passlib[bcrypt]~=1.7",
    "redis~=5.0",
    "alembic~=1.13",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
