[project]
name = "plant-frontend-web"
version = "0.1.0"
description = "Web UI frontend for plant automation system"
authors = [{ name = "Codex" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.30",
    "jinja2~=3.1",
    "python-multipart~=0.0.9",
    "httpx~=0.27",
    "itsdangerous~=2.2",  # For SessionMiddleware
    "pydantic-settings~=2.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
